[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme/FontBig.tres" type="DynamicFont" id=1]
[ext_resource path="res://theme/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/menus/WorldButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/menus/CustomLevels.gd" type="Script" id=4]

[node name="CustomLevelsMenu" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )
world_button_scene = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
alignment = 1

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
margin_right = 528.0
margin_bottom = 30.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Custom Levels"
align = 1
valign = 2

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 34.0
margin_right = 528.0
margin_bottom = 64.0

[node name="PanelContainer" type="PanelContainer" parent="Panel/VBoxContainer"]
margin_top = 68.0
margin_right = 528.0
margin_bottom = 288.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/PanelContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 496.0
margin_bottom = 188.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WorldContainer" type="VBoxContainer" parent="Panel/VBoxContainer/PanelContainer/ScrollContainer"]
margin_right = 464.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 292.0
margin_right = 528.0
margin_bottom = 322.0

[node name="Back" type="Button" parent="Panel/VBoxContainer"]
margin_top = 326.0
margin_right = 528.0
margin_bottom = 368.0
rect_min_size = Vector2( 0, 42 )
text = "Back"

[connection signal="about_to_show" from="." to="." method="_on_OptionsMenu_about_to_show"]
[connection signal="about_to_show" from="." to="." method="_on_CustomLevelsMenu_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_OptionsMenu_popup_hide"]
[connection signal="mouse_entered" from="Panel/VBoxContainer/Back" to="." method="_on_Back_mouse_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/Back" to="." method="_on_Back_pressed"]
